# workflow-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic.py
src/workflow/: __init__.py  engine.py  store.py  types.py
tests/: test_engine.py  test_store.py
