[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probeo-workflow-py"
version = "0.1.1"
description = "Stage-based pipeline engine for AI workloads. Zero dependencies. Code decides what happens. AI does the work."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Probeo", email = "dev@probeo.io" }]
keywords = ["workflow", "pipeline", "agent", "llm", "orchestration", "concurrency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/probeo-io/workflow-py"
Repository = "https://github.com/probeo-io/workflow-py"
Issues = "https://github.com/probeo-io/workflow-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.10"
